--- a/testing/evaluate_model.ipynb
+++ b/testing/evaluate_model.ipynb
@@ -28,8 +28,7 @@
     "from langchain.chains import LLMChain\n",
     "from langchain.llms import LlamaCpp\n",
     "from langchain.prompts import PromptTemplate\n",
-    "import os\n",
-    "import time"
+    "import os"
    ]
   },
   {
@@ -57,7 +56,7 @@
    "source": [
     "#DEFAULT PROMPT\n",
     "DEFAULT_SYSTEM_PROMPT = \"\"\"\\\n",
-    "You are a helpful, respectful and honest assistant. Always answer as helpfully as possible, while being safe. Your answers should not include any harmful, unethical, racist, sexist, toxic, dangerous, or illegal content. Please ensure that your responses are socially unbiased and positive in nature.\n",
+    "You are a helpful, respectful and honest assistant. Always answer as helpfully as possible, while being safe. \n",
     "If a question does not make any sense, or is not factually coherent, explain why instead of answering something not correct. If you don't know the answer to a question, please don't share false information.\"\"\"\n",
     "SYSTEM_PROMPT = B_SYS + DEFAULT_SYSTEM_PROMPT + E_SYS"
    ]
@@ -86,14 +85,30 @@
    "outputs": [],
    "source": [
     "#general prompt to test llm for testing questions\n",
-    "SYSTEM_PROMPT_EVAL = \"\"\"\n",
+    "SYSTEM_PROMPT_EVAL_ACCURACY = \"\"\"\n",
     "<<SYS>>\n",
     "You will be presented with a question and four answer options where only one is correct. You will respond with the letter that represents the correct answer option.\n",
     "Do not add any answer options, only choose the correct one from the for options presented because one of them is correct.\n",
     "If you don't know the answer, be honest and state that you don't know.\n",
     "<</SYS>>\n",
     "\"\"\"\n",
-    "SYSTEM_PROMPT = B_SYS + SYSTEM_PROMPT_EVAL +E_SYS"
+    "SYSTEM_PROMPT = B_SYS + SYSTEM_PROMPT_EVAL_ACCURACY +E_SYS"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#general prompt to test llm for testing questions\n",
+    "SYSTEM_PROMPT_EVAL_ROUGE = \"\"\"\n",
+    "<<SYS>>\n",
+    "You will be presented with a question where you are expected to give the correct answer in a short manner. \n",
+    "If you don't know the answer, be honest and state that you don't know. Don't give any false information.\n",
+    "<</SYS>>\n",
+    "\"\"\"\n",
+    "SYSTEM_PROMPT = B_SYS + SYSTEM_PROMPT_EVAL_ROUGE +E_SYS"
    ]
   },
   {
@@ -137,8 +152,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "##QUESTIONS WITH ANSWER OPTIONS\n",
-    "questions_data = [\n",
+    "##Questions with Answer options for ACCURACY\n",
+    "questions_accuracy = [\n",
     "    {\n",
     "        \"question\": \"Choose the correct option that represents an informal greeting.\",\n",
     "        \"choices\": {\"a\": \"Hi\", \"b\": \"Good Day\", \"c\": \"Greetings\", \"d\": \"Dear Mr./Mrs.\"},\n",
@@ -212,13 +227,44 @@
     "]\n",
     "\n",
     "\n",
-    "for question in questions_data:\n",
+    "for question in questions_accuracy:\n",
     "    print(\"Question:\", question[\"question\"])\n",
     "    print(\"Answer Options:\")\n",
     "    for option, answer in question[\"choices\"].items():\n",
     "        print(f\"{option}: {answer}\")\n",
     "    print(\"Correct Answer:\", f\"{question['correct']}\")\n",
     "    print(\"\\n\" + \"-\"*50 + \"\\n\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Define test questions with different categories for ROUGE\n",
+    "textual_entailment = {\n",
+    "    \"If 'A implies B' and 'B is false,' what can you conclude about A?\":\"Nothing definitive can be concluded about A.\",\n",
+    "}\n",
+    "\n",
+    "reasoning_problem_solving = {\n",
+    "    \"If a car travels at 60 miles per hour, how long will it take to cover 120 miles?\": \"2 hours\",\n",
+    "    \"Solve the following math problem: 3x + 5 = 20.\": \"x = 5\",\n",
+    "}\n",
+    "\n",
+    "analogical_reasoning = {\n",
+    "    \"If 'cat' is to 'kitten,' what is 'dog' to?\":\"'Dog' is to 'puppy'\",\n",
+    "}\n",
+    "\n",
+    "# Named Entity Recognition (NER)\n",
+    "ner = {\n",
+    "    \"Identify the named person in the sentence 'Elon Musk is the CEO of SpaceX.'\": \"Elon Musk\",\n",
+    "    \"Extract the date mentioned in the text 'The conference is scheduled for January 25, 2023.'\": \"January 25, 2023.\",\n",
+    "}\n",
+    "\n",
+    "# Combine all test questions into a single dictionary\n",
+    "questions_rouge = {**textual_entailment,**reasoning_problem_solving,**analogical_reasoning,**ner}\n",
+    "print(questions_rouge)"
    ]
   },
   {
@@ -236,11 +282,11 @@
    "source": [
     "model_answers = []\n",
     "\n",
-    "def evaluate_model(model, questions_data):\n",
+    "def evaluate_model_accuracy(model, questions_accuracy):\n",
     "    correct_answers = 0\n",
-    "    total_questions = len(questions_data)\n",
+    "    total_questions = len(questions_accuracy)\n",
     "\n",
-    "    for question_data in questions_data:\n",
+    "    for question_data in questions_accuracy:\n",
     "        question = question_data[\"question\"]\n",
     "        choices = question_data[\"choices\"]\n",
     "        correct_option = question_data[\"correct\"]\n",
@@ -277,17 +323,10 @@
     "    # print overall evaluation results\n",
     "    print(f\"Total Questions: {total_questions}\")\n",
     "    print(f\"Correct Answers: {correct_answers}\")\n",
-    "    print(f\"Accuracy: {correct_answers / total_questions * 100:.2f}%\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    print(f\"Accuracy: {correct_answers / total_questions * 100:.2f}%\")\n",
+    "\n",
     "#run method to get accuracy score\n",
-    "evaluate_model(llm, questions_data)"
+    "evaluate_model_accuracy(llm, questions_accuracy)"
    ]
   },
   {
@@ -319,6 +358,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#%pip install rouge - ##test rouge library - https://pypi.org/project/rouge/ \n",
+    "from rouge import Rouge\n",
+    "\n",
+    "##example calc for rouge\n",
     "hypothesis = \"the #### transcript is a written version of each day 's cnn student news program use this transcript to he    lp students with reading comprehension and vocabulary use the weekly newsquiz to test your knowledge of storie s you     saw on cnn student news\"\n",
     "\n",
     "reference = \"this page includes the show transcript use the transcript to help students with reading comprehension and     vocabulary at the bottom of the page , comment for a chance to be mentioned on cnn student news . you must be a teac    her or a student age # # or older to request a mention on the cnn student news roll call . the weekly newsquiz tests     students ' knowledge of even ts in the news\"\n",
@@ -334,113 +377,70 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#also check if rouge-score library better\n",
+    "#maybe check if rouge-score library better\n",
     "\n",
-    "#%pip install rouge\n",
-    "from rouge import Rouge\n",
-    "\n",
-    "##Rouge() hat rouge-1, rouge-2 and rouge-l as option \n",
-    "\n",
-    "def evaluate_model(model, questions):\n",
-    "    try:\n",
-    "        correct_answers = 0\n",
+    "def evaluate_model_rouge(model, questions):\n",
+    "   # try:\n",
     "        total_questions = len(questions)\n",
     "        model_answers = []\n",
-    "        rouge_scores = {\"rouge-1\": {\"recall\": 0, \"precision\": 0, \"f1-score\": 0}} \n",
+    "        rouge_scores_list = []\n",
+    "        rouge_scores = {\"rouge\": {\"recall\": 0, \"precision\": 0, \"f1-score\": 0}} \n",
     "\n",
-    "        for question_data in questions_data:\n",
-    "            question = question_data[\"question\"]\n",
-    "            choices = question_data[\"choices\"]\n",
-    "            correct_option = question_data[\"correct\"]\n",
-    "\n",
-    "            # Get model's answer for current question\n",
+    "        for question, expected_answer in questions_rouge.items():\n",
     "            prompt = f\"{question}\\nAnswer Options:\\n\"\n",
-    "            for option, answer in choices.items():\n",
-    "                prompt += f\"{option}: {answer}\\n\"\n",
     "            prompt = get_prompt(prompt)\n",
+    "            #print(prompt)\n",
     "            model_answer = model(prompt)\n",
     "\n",
-    "            # Check if selected option in model's answer matches the correct option\n",
     "            model_answer = model_answer.strip()\n",
-    "            correct_option = correct_option.strip()\n",
+    "            expected_answer = expected_answer.strip()\n",
     "\n",
-    "            if model_answer == correct_option:\n",
-    "                correct_answers += 1\n",
-    "\n",
-    "            # Get Rouge Score\n",
+    "            # Get Rouge Score - Rouge() hat rouge-1, rouge-2 and rouge-l as option \n",
     "            rouge = Rouge()\n",
-    "            scores = rouge.get_scores(correct_option, model_answer) \n",
+    "            scores = rouge.get_scores(expected_answer, model_answer) \n",
     "            print(scores)\n",
-    "            # Check if Rouge calculation was successful - WIP -> see test below \n",
-    "            if scores:\n",
-    "                scores = scores[0]\n",
-    "                for metric in [\"recall\", \"precision\", \"f1-score\"]:\n",
-    "                    rouge_scores[f\"rouge-1\"][metric] += scores.get(f\"rouge-1\", {}).get(metric, 0)\n",
-    "            \n",
     "\n",
-    "            # Print results for each question\n",
+    "             #save values for each question in list\n",
+    "            scores_list = rouge.get_scores(expected_answer, model_answer)[0]\n",
+    "            rouge_scores_list.append({\n",
+    "                \"r\": scores_list.get('rouge-1', {}).get('r', 0),\n",
+    "                \"p\": scores_list.get('rouge-1', {}).get('p', 0),\n",
+    "                \"f\": scores_list.get('rouge-1', {}).get('f', 0),\n",
+    "            })\n",
+    "            \n",
+    "            # Print the results for each question\n",
     "            print(f\"Question: {question}\")\n",
-    "            print(\"Answer Options:\")\n",
-    "            for option, answer in choices.items():\n",
-    "                print(f\"{option}: {answer}\")\n",
-    "            print(f\"Correct Answer: {correct_option}\")\n",
+    "            print(f\"Expected Answer: {expected_answer}\")\n",
     "            print(f\"Model Answer: {model_answer}\")\n",
     "            print(\"------------\")\n",
     "\n",
     "            # Store the model's answer and the corresponding question in the array\n",
     "            model_answers.append({\n",
     "                \"question\": question,\n",
-    "                \"choices\": choices,\n",
-    "                \"correct_option\": correct_option,\n",
-    "                \"selected_option\": model_answers,\n",
+    "                \"expected_answer\": expected_answer,\n",
+    "                \"model_answer\": model_answer,\n",
     "            })\n",
     "\n",
+    "        print(rouge_scores_list)\n",
     "\n",
-    "        # Calculate average Rouge scores\n",
-    "        for metric in [\"recall\", \"precision\", \"f1-score\"]:\n",
-    "            avg_rouge = rouge_scores[f\"rouge-1\"][metric] / total_questions\n",
+    "        # Calculate the average 'r', 'p', and 'f' values\n",
+    "        average_r = round(sum(entry[\"r\"] for entry in rouge_scores_list) / total_questions,3) \n",
+    "        average_p = round(sum(entry[\"p\"] for entry in rouge_scores_list) / total_questions,3)\n",
+    "        average_f = round(sum(entry[\"f\"] for entry in rouge_scores_list) / total_questions,3)\n",
     "\n",
-    "        # Print overall evaluation results\n",
-    "        print(f\"Total Questions: {total_questions}\")\n",
-    "        print(f\"Correct Answers: {correct_answers}\")\n",
-    "        print(f\"Accuracy: {correct_answers / total_questions * 100:.2f}%\")\n",
-    "        print(\"Average Rouge Score: \", avg_rouge)\n",
+    "        print(f\"Average Recall: {average_r}\")\n",
+    "        print(f\"Average Precision: {average_p}\")\n",
+    "        print(f\"Average F1-score: {average_f}\")\n",
     "\n",
     "        return model_answers, rouge_scores\n",
     "\n",
-    "    except Exception as e:\n",
-    "        print(f\"An error occurred: {e}\")\n",
-    "        return None, None"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model_answers, rouge_scores = evaluate_model(llm, questions_data)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "##test rouge library - https://pypi.org/project/rouge/ \n",
-    "## -> not clear which rouge metric meant: theres rouge-1/2/l - only referencing paper\n",
-    "##Note: \"f\" stands for f1_score, \"p\" stands for precision, \"r\" stands for recall.\n",
-    "\n",
-    "\n",
-    "##1 sentence\n",
-    "hypothesis = \"I am doing well. How about you?\"\n",
-    "reference = \"Hello, I am doing well. How about you?\"\n",
-    "#reference = \"Good day! I'm doing well, thank you for asking. How about you?\"\n",
-    "\n",
-    "rouge = Rouge()\n",
-    "scores = rouge.get_scores(hypothesis, reference)\n",
-    "print(scores)"
+    "    #except Exception as e:\n",
+    "     #   print(f\"An error occurred: {e}\")\n",
+    "      #  return None, None\n",
+    "    \n",
+    "#run method\n",
+    "model_answers, rouge_scores = evaluate_model_rouge(llm, questions_rouge)\n",
+    "\n"
    ]
   },
   {
@@ -485,8 +485,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%pip install bitsandbytes\n",
-    "%pip install datasets"
+    "#%pip install bitsandbytes\n",
+    "#%pip install datasets"
    ]
   },
   {
@@ -563,6 +563,16 @@
     "        break\n",
     "\n",
     "ppl = torch.exp(torch.stack(nlls).mean())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "##check Langchains QAEvalChain\n",
+    "#https://github.com/langchain-ai/langchain/blob/a6b39afe0e34621fafac885af05bbbb445ea5ac0/langchain/evaluation/qa/eval_chain.py#L42C1-L42C1"
    ]
   }
  ],
