--- a/testing/evaluate_model.ipynb
+++ b/testing/evaluate_model.ipynb
@@ -173,7 +173,7 @@
     "        \"correct\": \"a: Sincerely\"\n",
     "    },\n",
     "\n",
-    "    #Academic Style\n",
+    "    #academic Style\n",
     "      {\n",
     "        \"question\": \"Choose the correct option that represents an academic paper introduction.\",\n",
     "        \"choices\": {\"a\": \"Today we present our topic XYZ and we will also focus on ABC.\", \"b\": \"In this paper XYZ is presented with a focus on ABC.\", \"c\": \"Hi! In our paper we write about XYZ and ABC.\", \"d\": \"I show you something about XYZ in this paper.\"},\n",
@@ -412,31 +412,101 @@
     "    \"If 'cat' is to 'kitten,' what is 'dog' to?\":\"'Dog' is to 'puppy'\",\n",
     "}\n",
     "\n",
-    "# Named Entity Recognition (NER)\n",
     "ner = {\n",
     "    \"Identify the named person in the sentence 'Elon Musk is the CEO of SpaceX.'\": \"Elon Musk\",\n",
     "    \"Extract the date mentioned in the text 'The conference is scheduled for January 25, 2023.'\": \"January 25, 2023.\",\n",
     "}\n",
     "\n",
     "identification ={\n",
-    "    \"Given the following user review, answer the question. User review: The CO-1T is a great pair of headphones! The sound quality is the best out there, and I can hear every detail of my music. Question: Why is the CO-1T a great wireless headphone?\": \"Because the audio experience is unrivaled\",\n",
     "    \"How many objects are named in the following sequence: The dog was running towards the tree with a ball in his mouth.\": \"One object is named, a dog.\",\n",
     "    \"Given the statement, answer the following question. Statement: The sky is blue and the building is grey. Question: What color does the sky have?\": \"Blue\"\n",
     "}\n",
     "\n",
     "languageStyles = {\n",
-    "  \"What language style is used in the following Statement: Improvements cannot be introduced due to funding restrictions.\" : \"Formal.\",\n",
-    "  \"What language style is used in the following Statement: New results in this area are produced by the research group.\" : \"Academic.\",\n",
-    "  \"What language style is used in the following Statement: I donʼt believe that the results are accurate.\" : \"Informal\",\n",
-    "  \"What language style is used in the following Statement: The results are not believed to be accurate.\" : \"Formal\",\n",
-    "  \"What language style is described by the following statement: The style is more casual and spontaneous and is used to communicate with friends and family either in writing or conversations.\" : \"Informal\",\n",
-    "  \"What language style is described by the following statement: The style is used when writing or speaking for professional purpose and does not use colloquialism, contractions or first-person pronouns.\" : \"Formal\",\n",
-    "  \"What language style is described by the following statement: The style is used for higher school purposes like thesis or research papers and does not use first-person pronouns and is not personal but factual\" : \"Academic\",\n",
+    "\n",
+    "  # Informal Style\n",
+    "  \"What language style is used in the following Statement: Can you believe this weather? Do you think it'll rain later?\" : \"informal\",\n",
+    "  \"What language style is used in the following Statement: Hey, wanna grab a bite to eat later?\" : \"informal\",\n",
+    "  \"What language style is used in the following Statement: What's up with that new movie everyone's talking about? Have you seen the trailer?\" : \"informal\",\n",
+    "  \"What language style is used in the following Statement: Do you know if Sarah's coming to the party tonight? I heard she might not make it.\" : \"informal\",\n",
+    "  \"What language style is used in the following Statement: So, what's the deal with that new song everyone's listing to?\" : \"informal\",\n",
+    "  \"What language style is used in the following Statement: Did you catch the game last night?\" : \"informal\",\n",
+    "  \"What language style is used in the following Statement: Are you free tomorrow afternoon? Wanna hang out and grab some coffee?\" : \"informal\",\n",
+    "  \"What language style is used in the following Statement: What do you reckon we should do this weekend? Any fun ideas?\" : \"informal\",\n",
+    "  \"What language style is used in the following Statement: Did you see that meme I sent you earlier? It had me cracking up!\" : \"informal\",\n",
+    "  \"What language style is used in the following Statement: I donʼt believe that the results are accurate.\" : \"informal\",\n",
+    "  \"What language style is used in the following Statement: Hi, Helen! How’s it going?\" : \"informal\",\n",
+    "  \"What language style is used in the following Statement: Thanks. See you later.\" : \"informal\",\n",
+    "  \"What language style is used in the following Statement: No, I wasn’t at Steve’s party.\" : \"informal\",\n",
+    "  \"What language style is used in the following Statement: Sure, let’s go get a drink.\" : \"informal\",\n",
+    "  \"What language style is used in the following Statement: What are you up to this evening?\" : \"informal\",\n",
+    "  \"What language style is used in the following Statement: Oh, that’s a shame.\" : \"informal\",\n",
+    "  \"What language style is used in the following Statement: That didn’t make sense to me.\" : \"informal\",\n",
+    "  \"What language style is used in the following Statement: Seriously, you’ve got to be kidding me!?\" : \"informal\",\n",
+    "  \"What language style is used in the following Statement: I donʼt believe that the results are accurate.\" : \"informal\",\n",
+    "  \"What language style is used in the following Statement: He’ll have to do another five tests before he can stop the experiment.\" : \"informal\",\n",
+    "  \"What language style is described by the following statement: The style is more casual and spontaneous and is used to communicate with friends and family either in writing or conversations.\" : \"informal\",\n",
+    "    \"What language style is used in the following e-mail: Hi Beth, Just a quick message to thank you for dinner last night. Absolutely delicious, as always, and I really enjoyed meeting your friend Alice. \\\n",
+    "    She’s a laugh, isn’t she? I’m hoping to3 get tickets for the film festival next week, so I’ll be in touch to see if there’s anything you fancy seeing. Give my regards to Conrad when he gets back from Poland, and once again, thanks for last night. Love Sophie\" : \"informal\",\n",
+    "\n",
+    "  # Formal Style\n",
+    "  \"What language style is used in the following Statement: Improvements cannot be introduced due to funding restrictions.\" : \"formal\",\n",
+    "  \"What language style is used in the following Statement: Could you please provide an update on the progress of the project by the end of the day?\" : \"formal\",\n",
+    "  \"What language style is used in the following Statement: I would like to inquire about the availability of the conference room for our meeting next week.\" : \"formal\",\n",
+    "  \"What language style is used in the following Statement: Per our previous discussion, I am following up on the status of the pending tasks.\" : \"formal\",\n",
+    "  \"What language style is used in the following Statement: Kindly confirm the receipt of this email and let me know if any further action is required.\" : \"formal\",\n",
+    "  \"What language style is used in the following Statement: In accordance with company policy, employees are required to complete the mandatory training module.\" : \"formal\",\n",
+    "  \"What language style is used in the following Statement: Please be advised that the deadline for submitting the report has been extended to next Friday.\" : \"formal\",\n",
+    "  \"What language style is used in the following Statement: I am writing to formally request an extension on the deadline for the project proposal.\" : \"formal\",\n",
+    "  \"What language style is used in the following Statement: Per your request, attached is the revised version of the contract for your review.\" : \"formal\",\n",
+    "  \"What language style is used in the following Statement: I apologize for any inconvenience caused and appreciate your understanding in this matter.\" : \"formal\",\n",
+    "  \"What language style is used in the following Statement: Good morning, Mrs. Smith, how are you doing?\" : \"formal\",\n",
+    "  \"What language style is used in the following Statement: Only food purchased here may be eaten on the premises.\" : \"formal\",\n",
+    "  \"What language style is described by the following statement: The style is used when writing or speaking for professional purpose and does not use colloquialism, contractions or first-person pronouns.\" : \"formal\",\n",
+    "  \"What language style is used in the following e-mail: Dear Sir or Madam, I am writing in response to3 your advertisement about job opportunities for graduates. I have just completed a degree in Economics at Durham University, and \\\n",
+    "    I would be grateful if you could send me further details6 of the graduate training schemes you mention. I am available for interview at any time. I look forward to hearing from you. Yours faithfully\" : \"formal\",\n",
+    "  \"What language style is used in the following Statement: Please respect our no radio playing policy.\" : \"formal\",\n",
+    "  \"What language style is used in the following Statement: This could be an effective plan.\" : \"formal\",\n",
+    "  \"What language style is used in the following Statement: There were two different methods of research.\" : \"formal\",\n",
+    "  \"What language style is used in the following Statement: The project will be completed next year.\" : \"formal\",\n",
+    "  \"What language style is used in the following Statement: Five more tests will be necessary before the experiment can be concluded.\" : \"formal\",\n",
+    "  \"What language style is used in the following Statement: It is possible to consider the results from a different viewpoint.\" : \"formal\",\n",
+    "  \"What language style is used in the following Statement: It has been proved that the arguments so far are without foundation.\" : \"formal\",\n",
+    "  \"What language style is used in the following Statement: There are a several reasons why the questionnaire should be revised.\" : \"formal\",\n",
+    "\n",
+    "  # academic Style\n",
+    "  \"What language style is described by the following statement: The style is used for higher school purposes like thesis or research papers and does not use first-person pronouns and is not personal but factual\" : \"academic\",\n",
+    "  \"What language style is used in the following Statement: New results in this area are produced by the research group.\" : \"academic\",\n",
+    "  \"What language style is used in the following Statement: How do socioeconomic factors influence voting behavior in democratic societies?\" : \"academic\",\n",
+    "  \"What language style is used in the following Statement: What is the significance of the findings reported in the latest research paper on climate change?\" : \"academic\",\n",
+    "  \"What language style is used in the following Statement: How do cognitive biases affect decision-making processes in individuals and organizations?\" : \"academic\",\n",
+    "  \"What language style is used in the following Statement: The study investigates the correlation between socioeconomic status and educational attainment in urban communities.\" : \"academic\",\n",
+    "  \"What language style is used in the following Statement: The analysis explores the impact of climate change on agricultural productivity in developing countries.\" : \"academic\",\n",
+    "  \"What language style is used in the following Statement: The research paper examines the role of cultural factors in shaping consumer behavior in global markets.\" : \"academic\",\n",
+    "  \"What language style is used in the following Statement: The literature review synthesizes existing studies on the effects of social media use on mental health outcomes.\" : \"academic\",\n",
+    "  \"What language style is used in the following Statement: The theoretical framework draws upon sociological theories to analyze patterns of social inequality in urban neighborhoods.\" : \"academic\",\n",
+    "  \"What language style is used in the following Statement: The analysis examines demographic trends in urbanization.\" : \"academic\",\n",
+    "  \"What language style is used in the following Statement: The findings highlight disparities in access to healthcare services.\" : \"academic\",\n",
+    "  \"What language style is used in the following Statement: The literature review synthesizes recent advancements in machine learning algorithms.\" : \"academic\",\n",
+    "  \"What language style is used in the following Statement: The analysis underscores the importance of data privacy in digital healthcare systems.\" : \"academic\",\n",
+    "  \"What language style is used in the following Statement: These findings indicate that the model is valid.\" : \"academic\",\n",
+    "  \"What language style is used in the following Statement: The following section will show how the model is validated by the findings.\" : \"academic\",\n",
+    "  \"What language style is used in the following Statement: As Halliday(1973) shows, language is intrinsically social.\" : \"academic\",\n",
+    "  \"What language style is used in the following Statement: Many researchers have utilised X to measure Y.\" : \"academic\",\n",
+    "  \"What language style is used in the following Statement: A number of techniques have been developed to...\" : \"academic\",\n",
+    "  \"What language style is used in the following Statement: Different authors have measured X in a variety of ways.\" : \"academic\",\n",
+    "  \"What language style is used in the following Statement: Several methods currently exist for the measurement of X.\" : \"academic\",\n",
+    "  \"What language style is used in the following Statement: There are three main types of study design used to identify X.\" : \"academic\",\n",
+    "  \"What language style is used in the following Statement: In most recent studies, X has been measured in four different ways.\" : \"academic\",\n",
+    "  \"What language style is used in the following Statement: In recent years, two different approaches have attempted to account for X.\" : \"academic\",\n",
+    "  \"What language style is used in the following Statement: A variety of methods are used to assess X. Each has its advantages and drawbacks.\" : \"academic\",\n",
+    "  \"What language style is used in the following Statement: Two of the most common methods for estimating X are the use of Y and the measurement of Z.\" : \"academic\",\n",
     "}\n",
     "\n",
+    "\n",
     "# Combine all test questions into a single dictionary\n",
-    "questions_rouge = {**textual_entailment,**reasoning_problem_solving,**analogical_reasoning,**ner,**identification,**languageStyles}\n",
-    "#print(questions_rouge)"
+    "#questions_rouge = {**textual_entailment,**reasoning_problem_solving,**analogical_reasoning,**ner,**identification,**languageStyles}\n",
+    "questions_rouge = {**languageStyles}\n"
    ]
   },
   {
@@ -464,6 +534,30 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
+    "#Function that extracts only the language style named \n",
+    "def extract_language_style(input_string):\n",
+    "\n",
+    "    # Check if the input string is empty\n",
+    "    if not input_string:\n",
+    "        return \"\"\n",
+    "    \n",
+    "    words = input_string.split()\n",
+    "    words = [word.strip(\",.!?\").lower() for word in words]\n",
+    "    allowed_words = {\"informal\", \"formal\", \"academic\"}\n",
+    "\n",
+    "    for word in words:\n",
+    "        if word in allowed_words:\n",
+    "            return word\n",
+    "    return \"False\"\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "#maybe check if rouge-score library better\n",
     "\n",
     "def evaluate_model_rouge(model, questions):\n",
@@ -481,8 +575,12 @@
     "            #print(prompt)\n",
     "            model_answer = model(prompt)\n",
     "\n",
+    "            #remove leading & trailing spaces, extract language style from model_answer if answer is unnecessarily long\n",
     "            model_answer = model_answer.strip()\n",
     "            expected_answer = expected_answer.strip()\n",
+    "\n",
+    "            model_answer = extract_language_style(model_answer)\n",
+    "\n",
     "\n",
     "            # Get Rouge Score - Rouge() hat rouge-1, rouge-2 and rouge-l as option \n",
     "            rouge = Rouge()\n",
@@ -507,7 +605,6 @@
     "                \"p\": scores_list_rl.get('rouge-l', {}).get('p', 0),\n",
     "                \"f\": scores_list_rl.get('rouge-l', {}).get('f', 0),\n",
     "            })\n",
-    "            \n",
     "            \n",
     "            # Print the results for each question\n",
     "            print(f\"Question: {question}\")\n",
